# law_pipeline

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  pyproject.toml
.airflow/: airflow.cfg
.kiro/specs/legal-data-pipeline/: design.md  requirements.md  tasks.md
config/: api_config.yaml  database.yaml  mock.yaml  notification.yaml
dags/: test_config_dag.py
dags/config/: api_config.yaml  database.yaml  notification.yaml
deployment/: Dockerfile.app  Dockerfile.controller  Dockerfile.migration  Dockerfile.monitor  README_COMPLETE.md  README_UV.md  api.py  app_entrypoint.sh  blue_green_deploy.py  docker-compose.bluegreen.yml  health_monitor.py  nginx_controller.py  pyproject.toml
docker/grafana/dashboards/: dashboard.yml
docker/grafana/datasources/: prometheus.yml
docker/mysql/: init-blue.sql  init-common.sql  init-green.sql
docker/nginx/: maintenance.html
docker/prometheus/: prometheus.yml
docs/: MOCK_ENVIRONMENT.md
scripts/: README.md  __init__.py  batch_monitor.py  data_validation.py  full_data_load.py  incremental_update.py  run_airflow_dag.py  setup_kafka_topics.py  setup_mock_environment.py  start_infrastructure.sh  stop_infrastructure.sh  test_kafka_integration.py  test_mock_api.py  test_mock_database.py  test_notifications.py  test_partition_optimization.py  update_schema.py
scripts/component_tests/: test_api_client.py  test_database_connection.py  test_kafka_integration.py  test_notifications.py
src/: __init__.py  config.py  logging_config.py  main.py  main_with_mock.py
src/airflow/: __init__.py
src/airflow/config/: airflow_config.py
src/airflow/dags/: daily_legal_data_pipeline.py  kafka_legal_data_pipeline_dag.py  legal_data_pipeline_dag.py
src/airflow/operators/: legal_data_operators.py
src/airflow/utils/: dag_utils.py
src/api/: __init__.py  client.py  kafka_client.py  models.py
src/config/: database_blue.yaml  database_green.yaml  notification.yaml
src/database/: README.md  __init__.py  connection.py  models.py  repository.py  schema.sql
src/kafka/: config.py  consumer.py  models.py  producer.py
src/mock/: __init__.py  api_mock.py  data_generator.py  database_mock.py  mock_config.py
src/notifications/: README.md  __init__.py  notification_service.py  slack_service.py  utils.py
src/scripts/: README.md  deploy_bluegreen.sh  run_mock_airflow_dag.py  setup_kafka_topics.py  setup_mock_environment.py  start_infrastructure.sh  stop_infrastructure.sh  test_partition_optimization.py
src/streaming/: __init__.py  config.py  consumer.py  models.py  partition_monitor.py  producer.py
tests/: test_repository_comprehensive.py  test_repository_unit.py
