[project]
name = "legal-data-pipeline-deployment"
version = "1.0.0"
description = "Blue-Green Deployment System for Legal Data Pipeline"
authors = [{name = "Legal Data Pipeline Team"}]
requires-python = ">=3.11"
dependencies = [
    # Core application dependencies
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Database
    "mysql-connector-python>=8.2.0",
    "SQLAlchemy>=2.0.23",
    "alembic>=1.13.0",
    
    # Redis
    "redis>=5.0.1",
    "hiredis>=2.3.2",
    
    # Kafka
    "kafka-python>=2.0.2",
    "confluent-kafka>=2.3.0",
    
    # HTTP client
    "httpx>=0.25.2",
    "requests>=2.31.0",
    
    # Configuration
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
    
    # Monitoring and logging
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    
    # Utilities
    "click>=8.1.7",
    "rich>=13.7.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    # Development and testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1", 
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    
    # Code quality
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    
    # Pre-commit
    "pre-commit>=3.0.0",
]

monitoring = [
    # Additional monitoring dependencies
    "grafana-api>=1.0.3",
    "prometheus-api-client>=0.5.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0", 
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
